# agrosat-copilot

./: .dbmate.yaml  .dvcignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  dagster.yaml  docker-compose.yml  package.json  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: agent-engineer.md  backend-engineer.md  finops-auditor.md  frontend-engineer.md  geo-data-engineer.md  ml-engineer.md  mlops-engineer.md  paper-writer.md  security-reviewer.md
.claude/skills/agrosat-azure-h100/: SKILL.md
.claude/skills/agrosat-backend-api/: SKILL.md
.claude/skills/agrosat-backend-services/: SKILL.md
.claude/skills/agrosat-code-review/: SKILL.md
.claude/skills/agrosat-dagster-mlops/: SKILL.md
.claude/skills/agrosat-db-migrations/: SKILL.md
.claude/skills/agrosat-db-models/: SKILL.md
.claude/skills/agrosat-dvc-mlflow/: SKILL.md
.claude/skills/agrosat-engram-memory/: SKILL.md
.claude/skills/agrosat-evidently-drift/: SKILL.md
.claude/skills/agrosat-finops/: SKILL.md
.claude/skills/agrosat-frontend-components/: SKILL.md
.claude/skills/agrosat-frontend-composables/: SKILL.md
.claude/skills/agrosat-gcp-services/: SKILL.md
.claude/skills/agrosat-gee-alphaearth/: SKILL.md
.dvc/: config
.github/: CODEOWNERS
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: __init__.py  eda_dashboard.py
backend/: AGENTS.md  CLAUDE.md
backend/app/: main.py
config/: llm.yaml  rois.yaml
context/: AgroSatCopilot.md  RefinamientoPlaneacionAgroSatCopilot_v6.md  RefinamientoPlaneacionAgroSatCopilot_v6_RESUMEN.md
dagster_project/: AGENTS.md  CLAUDE.md  __init__.py  definitions.py  workspace.yaml
dagster_project/assets/: __init__.py  farslip.py  features.py  health.py  sentinel2_crops.py
data/reference/: eurocrops_fr_2018_rpg_to_hcat3.csv  pastis_class_mapping.json  pastis_tiles_dissolved.geojson
data/test_fixtures/: feature_selection_subset.parquet  parcel_demo_ts.nc  parcels_demo_3regions.parquet
datasets/raw/: datasets.md
db/: AGENTS.md  CLAUDE.md
db/migrations/: 20260511213942_initial_schema.sql  20260516210000_create_parcels.sql  20260516210100_create_features_parcels.sql
deploy/streamlit/: README.md  requirements.txt  streamlit_app.py
docs/: spectral_indices.md
docs/decisions/: ADR-001-no-cookiecutter-externo.md  ADR-002-single-env-dev.md  ADR-003-upstash-redis.md  ADR-004-poetry-optional-groups-and-aiplatform-ml.md  ADR-005-notebooks-policy-idioma-y-outputs.md
docs/general/: Rubricas Integrador.html
docs/licenses/: DATA_LICENSE.md
docs/manual-test/: us-001.md  us-010.md  us-011.md  us-012.md  us-013.md  us-014.md  us-015.md  us-016.md  us-017.md  us-018.md
docs/orchestration/: auto-invoke.md  commands.md  skill-owners.md  skills-catalog.md
docs/product-backlog/: eda-dashboard-fase-b-nuxt.md  us-016-1-dvc-multisensor-outputs.md
docs/us-handoff/: us-001.md  us-010.md  us-011.md  us-012.md  us-013.md  us-014.md  us-015.md  us-016.md  us-017.md  us-018.md
docs/us-planning/: us-001.md  us-010.md  us-011.md  us-012.md  us-013.md  us-014.md  us-015.md  us-016.md  us-017.md  us-018.md
docs/us-resolved/: us-001.md  us-011.md  us-012.md  us-013.md  us-014.md  us-015.md  us-016.md  us-017.md
frontend/: AGENTS.md  CLAUDE.md  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/pages/: index.vue
infrastructure/: AGENTS.md  CLAUDE.md  README.md  cloudbuild.yaml
infrastructure/docker/: backend.Dockerfile  dagster.Dockerfile  frontend.Dockerfile  inference-worker.Dockerfile  postgres.Dockerfile
ml/: AGENTS.md  CLAUDE.md
ml/agent/: AGENTS.md  CLAUDE.md
ml/analysis/: __init__.py  band_stats.py  correlations.py  distributions.py  embeddings.py  outliers.py  scl_missingness.py  visualization.py
ml/configs/: l4_spot.yaml
ml/extractors/: __init__.py  farslip_extractor.py
ml/farslip/: __init__.py  cap_vocabulary.yaml  dataset.py  dataset_audit.py  distill.py  train.py
ml/features/: __init__.py  encoding.py  fusion.py  persist_features.py  scaler.py  selection.py  spatial_split.py  spectral_indices.py  temporal_features.py
ml/ingest/: __init__.py  gee_sampler.py  pastis_loader.py
ml/report/: __init__.py  export_pdf.py  extract_notebook_figures.py  figure_narratives.py  generate_pastis_subset.py  notebook_content.py
ml/utils/: gcs_errors.py  geo_io.py  git_meta.py  notebook_setup.py  sampling.py  seed.py
notebooks/: 02c_eda_bivariado_temporal.ipynb  AGENTS.md  CLAUDE.md
notebooks/eda/: 02b_eda_alphaearth.ipynb  02c_eda_bivariado_temporal.ipynb  02c_eda_pastis.ipynb  readme.md  requirements.in  requirements.txt
notebooks/feature_engineering/: 02a_fe_sentinel2.ipynb  03a_fe_sentinel2.ipynb  03b_fe_spectral_temporal_pastis.ipynb  03c_fe_alphaearth_pastis.ipynb  Avance2.Equipo17.ipynb
paper/: AGENTS.md  CLAUDE.md  avance1_eda_report.html
reports/feature_fusion/: ae_anova_f_top.csv  ae_dim_stats.csv  ae_temporal_stability.csv  ae_vs_spectral_temporal_indicative.csv  fusion_block_contract.csv  fusion_manifest.json  parcel_features_scaler_v1.pkl  spatial_folds_summary.csv
scripts/: azure_h100_start.sh  azure_h100_status.sh  azure_h100_stop.sh  build_avance1_notebook.py  build_avance2_notebook.py  build_fusion_notebook.py  build_parcel_features.py  build_us018_notebook.py  cost_audit.sh  farslip_smoke_eval.py  generate_alphaearth_pastis_full.py  generate_demo_parcel_ts.py  generate_feature_selection_subset.py  i18n_check.mjs  security_audit.sh  seed.py  serve_qwen35.sh  verify_structure.sh
tests/: conftest.py
tests/app/: __init__.py  test_dashboard.py
tests/dagster/: test_farslip_assets.py  test_features_assets.py
tests/db/: test_migrations_us015.py
tests/manual/: run_us015_qa.py  snapshot_schema_us015.sql
tests/ml/: conftest.py  test_band_stats.py  test_correlations.py  test_distributions.py  test_embeddings.py  test_gee_sampler.py  test_notebook_setup.py  test_outliers.py  test_pastis_loader.py  test_sampling.py  test_scl_missingness.py  test_visualization.py
tests/scripts/: test_build_avance1_notebook.py
(+79 files in other folders)
