[tool.poetry]
name = "agrosatcopilot"
version = "0.1.0"
description = "SaaS conversacional open-source para análisis satelital agrícola"
authors = [
    "Arthur Zizumbo",
    "Aaron Bocanegra",
    "Isaac Ávila",
]
readme = "README.md"
license = "MIT"
packages = [
    { include = "backend" },
    { include = "ml" },
    { include = "dagster_project" },
]

[tool.poetry.dependencies]
python = "^3.12"
# Backend
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
pydantic = "^2.9"
pydantic-settings = "^2.6"
sqlmodel = "^0.0.22"
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.30"
geoalchemy2 = "^0.15"
pgvector = "^0.3"
redis = { extras = ["hiredis"], version = "^5.2" }
structlog = "^24.4"
slowapi = "^0.1.9"
python-magic = "^0.4.27"
clerk-sdk = "^0.0.6"
titiler-core = "^0.18"
rio-tiler = "^7.0"
# GCP
google-cloud-pubsub = "^2.27"
google-cloud-storage = "^2.18"
google-cloud-secret-manager = "^2.21"
google-cloud-aiplatform = { extras = ["reasoning_engines"], version = "^1.71" }
# Earth Engine
earthengine-api = "^1.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7"
mypy = "^1.13"
ipython = "^8.27"
nbstripout = "^0.7"

[tool.poetry.group.test.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^5.0"
httpx = "^0.27"
pytest-httpx = "^0.32"
testcontainers = { extras = ["postgresql", "redis"], version = "^4.8" }
faker = "^30.0"

[tool.poetry.group.ml.dependencies]
torch = "^2.4"
transformers = "^4.46"
peft = "^0.13"
accelerate = "^1.0"
bitsandbytes = "^0.44"
flash-attn = "^2.6"
xgboost = "^2.1"
lightgbm = "^4.5"
scikit-learn = "^1.5"
segmentation-models-pytorch = "^0.3"
monai = "^1.4"
optuna = "^4.0"
mlflow = "^2.16"
dvc = { extras = ["gs"], version = "^3.55" }
polars = "^1.12"
duckdb = "^1.1"
pyarrow = "^17.0"
sentence-transformers = "^3.2"
vllm = "^0.6"
# Agent
google-adk = "^0.2"
litellm = "^1.51"

[tool.poetry.group.geo.dependencies]
rasterio = "^1.4"
xarray = "^2024.10"
rioxarray = "^0.17"
geopandas = "^1.0"
shapely = "^2.0"
spyndex = "^0.6"
eemont = "^0.3"
pystac-client = "^0.8"
pgstac = "^0.9"
sentinelhub = "^3.10"
deepeval = "^1.5"
evidently = "^0.4"

[tool.poetry.group.paper.dependencies]
matplotlib = "^3.9"
seaborn = "^0.13"
plotly = "^5.24"

[tool.poetry.group.dagster.dependencies]
dagster = "^1.9"
dagster-webserver = "^1.9"
dagster-mlflow = "^0.25"
dagster-gcp = "^0.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# === Tooling ===
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["frontend/node_modules", ".venv", "data", "models"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "UP", "RUF"]
ignore = ["S101", "S301"]  # asserts ok en tests; pickle ok para ML

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
"notebooks/**" = ["E402", "F401"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests", "ml/tests"]
filterwarnings = ["ignore::DeprecationWarning"]
