[project]
name = "agrosatcopilot"
version = "0.1.0"
description = "SaaS conversacional open-source para análisis satelital agrícola"
authors = [
    { name = "Arthur Zizumbo" },
    { name = "Aaron Bocanegra" },
    { name = "Isaac Ávila" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
# `dependencies` y `classifiers` quedan dynamic para conservar la sintaxis rica
# de grupos de Poetry (`[tool.poetry.group.*.dependencies]`, sources explícitas).
dynamic = ["dependencies", "classifiers"]

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
    { include = "backend" },
    { include = "ml" },
    { include = "dagster_project" },
]

[tool.poetry.dependencies]
# Backend
fastapi = "^0.136.1"
uvicorn = { extras = ["standard"], version = "^0.46.0" }
pydantic = "^2.13.4"
pydantic-settings = "^2.14.1"
sqlmodel = "^0.0.38"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.49" }
asyncpg = "^0.31.0"
geoalchemy2 = "^0.20.0"
pgvector = "^0.4.2"
redis = { extras = ["hiredis"], version = "^7.4.0" }
structlog = "^25.5.0"
slowapi = "^0.1.9"
python-magic = "^0.4.27"
clerk-sdk = "^1.1.1"
titiler-core = "^2.0.2"
rio-tiler = "^9.0.6"
# GCP (solo lo que el backend FastAPI necesita: Pub/Sub para despachar jobs,
# GCS para firmas, Secret Manager. Vertex AI Agent Engine vive en grupo `ml`)
google-cloud-pubsub = "^2.38.0"
google-cloud-storage = "^3.10.1"
google-cloud-secret-manager = "^2.28.0"
# Earth Engine
earthengine-api = "^1.7.26"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.12"
mypy = "^2.1.0"
ipython = "^9.13.0"
nbstripout = "^0.9.1"
notebook = "^7.5.6"
psycopg = {extras = ["binary"], version = "^3.3.4"}

[tool.poetry.group.test.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
httpx = "^0.28.1"
pytest-httpx = "^0.36.2"
testcontainers = { extras = ["postgresql", "redis"], version = "^4.14.2" }
faker = "^40.15.0"
fakeredis = "^2.35.1"

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
# torch / flash-attn / vllm requieren GPU → ver grupos `ml-gpu` y `ml-gpu-linux`
# Backend (api) NO instala `ml` (suficiente con `main` + `dev,test`)
# Mac / Win sin GPU         → poetry install --with ml
# Win / Linux con GPU NVIDIA → poetry install --with ml,ml-gpu          (torch+cu130 + bitsandbytes)
# Linux con GPU NVIDIA      → poetry install --with ml,ml-gpu,ml-gpu-linux (+ flash-attn + vllm)
transformers = "^5.8.0"
peft = "^0.19.1"
accelerate = "^1.13.0"
xgboost = "^3.2.0"
lightgbm = "^4.6.0"
scikit-learn = "^1.8.0"
scipy = "^1.15.0"
segmentation-models-pytorch = "^0.5.0"
monai = "^1.5.2"
optuna = "^4.8.0"
mlflow = "^3.12.0"
dvc = { extras = ["gs"], version = "^3.67.1" }
polars = "^1.40.1"
duckdb = "^1.5.2"
# EDA US-010/011/012 — papermill ejecuta notebooks, pyyaml carga config/rois.yaml
papermill = "^2.6.0"
pyyaml = "^6.0.2"
# pyarrow pinneado a 23.x: mlflow 3.12 aún no soporta pyarrow 24. Subir cuando mlflow 3.13+ lo permita.
pyarrow = "^23.0.1"
sentence-transformers = "^5.0.0"
# Vertex AI / Agent (deploy del agente ADK a Vertex AI Agent Engine)
google-cloud-aiplatform = { extras = ["reasoning_engines"], version = "^1.152.0" }
google-adk = "^1.33.0"
litellm = "^1.83.14"
ipykernel = "^7.2.0"
# EDA US-011: reduccion dimensional + tests estadisticos + DTW (US-012 reusa)
umap-learn = "^0.5.7"
statsmodels = "^0.14.4"
tslearn = "^0.6.3"
# EDA US-010: pandas (notebooks legacy), tqdm (progress en pastis_eda_final)
# pandas requerido por seaborn como input para pivot/heatmap; Polars internamente
# convierte solo en el borde. tqdm usado para iterar patches en pastis_eda_final.
pandas = "^2.3.0"
tqdm = "^4.67.0"
# US-017 / US-016b — CLI Typer para ml/farslip/train.py, dataset_audit.py y
# scripts/farslip_smoke_eval.py. Compatible con la version transitiva de FastAPI.
typer = "^0.25.0"
# safetensors para persistir pesos student FarSLIP (formato HF estandar).
safetensors = "^0.7.0"

[tool.poetry.group.ml-gpu]
optional = true

[tool.poetry.group.ml-gpu.dependencies]
# Cross-platform GPU: torch CUDA 13.0 + bitsandbytes. Funciona en Win + Linux con
# GPU NVIDIA (driver >= 580). Wheels desde el index oficial PyTorch (cu130).
torch = { version = "2.11.0+cu130", source = "pytorch-cu130" }
bitsandbytes = "^0.49.2"

[tool.poetry.group.ml-gpu-linux]
optional = true

[tool.poetry.group.ml-gpu-linux.dependencies]
# Linux-only: flash-attn (build con CUDA toolkit) + vllm (sin soporte oficial Win).
# Solo para Cloud Run GPU L4 / Azure H100. NO se instala en Windows local.
flash-attn = "^2.8.3"
vllm = "^0.20.2"

[tool.poetry.group.geo]
optional = true

[tool.poetry.group.geo.dependencies]
rasterio = "^1.5.0"
xarray = "^2026.4.0"
rioxarray = "^0.22.0"
geopandas = "^1.1.3"
shapely = "^2.1.2"
spyndex = "^0.10.0"
eemont = "^2025.7.1"
geemap = "^0.36.5"
folium = "^0.19.7"
pystac-client = "^0.9.0"
pypgstac = "^0.9.11"
sentinelhub = "^3.11.5"
deepeval = "^4.0.0"
evidently = "^0.7.21"
h3 = "^4.1.2"

[tool.poetry.group.paper]
optional = true

[tool.poetry.group.paper.dependencies]
matplotlib = "^3.10.9"
seaborn = "^0.13.2"
# plotly pinneado a 5.x por conflicto transitivo con evidently 0.7.21 (grupo geo)
# que requiere plotly >=5.10,<6. Subir a 6.x cuando evidently lance 0.8+ con soporte.
plotly = "^5.24.0"
# US-013 — dashboard Streamlit `app/eda_dashboard.py` + reporte PDF weasyprint.
# Streamlit >=1.50 trae AppTest estable (1.28+) y st.tabs/st.columns/st.dataframe
# de la API moderna. streamlit-folium 0.27 alinea con folium 0.19 (grupo geo).
# weasyprint 65.x: cambios de paginación; jinja2 3.1 para los templates HTML.
# Lock se regenera local con `poetry lock --no-update` (no incluido en commit).
streamlit = "^1.50"
streamlit-folium = "^0.27"
weasyprint = "^65.0"
jinja2 = "^3.1"

[tool.poetry.group.dagster]
optional = true

[tool.poetry.group.dagster.dependencies]
dagster = "^1.13.4"
dagster-webserver = "^1.13.4"
dagster-postgres = "^0.29.4"
dagster-mlflow = "^0.29.4"
dagster-gcp = "^0.29.4"

[[tool.poetry.source]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# === Tooling ===
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["frontend/node_modules", ".venv", "data", "models"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "BLE", "S", "UP", "RUF"]
ignore = ["S101", "S301"]  # asserts ok en tests; pickle ok para ML

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S"]
"notebooks/**" = ["E402", "F401"]
"scripts/**" = ["S603", "S607"]
# US-013: contenido editorial en español con tipografía rica (em/en dash, comillas tipográficas,
# signo de multiplicación). RUF001/002/003 marcan estos caracteres como "ambiguos" en código,
# pero aquí son texto para humanos. El dashboard Streamlit también usa estos caracteres en HTML.
"ml/report/notebook_content.py" = ["RUF001", "RUF002", "RUF003"]
"ml/report/figure_narratives.py" = ["RUF001", "RUF002", "RUF003"]
"app/eda_dashboard.py" = ["RUF001", "RUF002", "RUF003"]
"scripts/build_avance1_notebook.py" = ["RUF001", "RUF002", "RUF003"]
# US-015 docstrings agronómicos en español usan caracteres tipográficos
# (σ, ×, ≥, π) deliberadamente para preservar notación matemática estándar.
"ml/features/temporal_features.py" = ["RUF001", "RUF002", "RUF003"]
"tests/ml/features/test_temporal_features.py" = ["RUF001", "RUF002", "RUF003", "E501"]
"scripts/generate_demo_parcel_ts.py" = ["RUF001", "RUF002", "RUF003", "B008", "BLE001"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests", "tests/ml"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: integration tests requiring Docker / external services",
    "e2e: end-to-end tests requiring full stack",
    "requires_gee: tests that require a live Earth Engine session (skipped in CI)",
    "slow: tests that take >5s; deselect with `-m 'not slow'`",
]
